@@ -1,3 +1,7 @@
+2008-09-10  Gautier Portet  <kassoulet gmail com>
+	* src/soundconverter.py: Add {Timestamp} filename template.
+	  (thanks Mark)
+	
 2008-09-07  Gautier Portet  <kassoulet gmail com>
 	* data/soundconverter.glade, src/soundconverter.py:
 	  Added quality 10 to vorbis settings.
